--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>PeepBlogFrontend</title>
+    <title>NeepBlogFrontend</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for 'head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/peep-blog-frontend.css">
+    <link rel="stylesheet" href="assets/neep-blog-frontend.css">
 
     {{content-for 'head-footer'}}
   </head>
@@ -18,7 +18,7 @@
     {{content-for 'body'}}
 
     <script src="assets/vendor.js"></script>
-    <script src="assets/peep-blog-frontend.js"></script>
+    <script src="assets/neep-blog-frontend.js"></script>
 
     {{content-for 'body-footer'}}
   </body>
